# words_on_paper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
examples/: complete_demo.yaml  depth_fade.yaml  font_size_test.yaml  overlapping_phrases.yaml  simple_fade.yaml  typing_effect.yaml  verticle_test.yaml
my_python_project/: __init__.py  main.py
src/words_on_paper/: __init__.py  __main__.py
src/words_on_paper/background/: paper_texture.py
src/words_on_paper/composition/: __init__.py  animator.py  frame_builder.py  layer_manager.py
src/words_on_paper/config/: loader.py  schema.py
src/words_on_paper/rendering/: __init__.py  fonts.py  text_renderer.py
src/words_on_paper/utils/: color.py  timing.py
src/words_on_paper/video/: __init__.py
tests/: __init__.py  test_main.py
tests/background/: __init__.py  test_paper_texture.py
tests/composition/: __init__.py  test_animator.py  test_frame_builder.py
tests/config/: test_loader.py  test_schema.py
tests/rendering/: __init__.py  test_text_renderer.py
tests/utils/: test_color.py  test_timing.py
words_on_paper/: cli.py
words_on_paper/background/: __init__.py
words_on_paper/composition/: __init__.py  animator.py  frame_builder.py
words_on_paper/config/: __init__.py  schema.py
words_on_paper/rendering/: __init__.py  fonts.py  text_renderer.py
words_on_paper/utils/: __init__.py
words_on_paper/video/: assembler.py
